deployment/trino/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino
  labels:
    app: trino
spec:
  selector:
    app: trino
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
