deployment/trino/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: trino-route
spec:
  to:
    kind: Service
    name: trino-service
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
